[package]
name = "citations"
description = "Structs to store citations and functions to create formatted citations."
homepage = "https://github.com/ellygaytor/citations"
repository = "https://github.com/ellygaytor/citations"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"